--- a/package.json
+++ b/package.json
@@ -362,6 +362,7 @@
     "string_decoder": "^1.0.3"
   },
   "devDependencies": {
+    "gulp": "^3.9.1",
     "gulp-livereload": "^3.8.1",
     "gulp-sass": "^3.1.0"
   },
